styles/style.css
/* *********************** CSS Variables ************************* */
:root {
    --alternate-background: #87CEEB;
    --primary-accent: #DAA520;
    --hover-primary-accent: #E58230;
    --primary-font: #333;
    --primary-font-hover: #444444;
    --primary-background: whitesmoke;
    --primary-background-hover: white;
    --header-footer-background: #333333;
    --header-footer-font: whitesmoke;
}

/* *********************** Reset ************************* */
html {
    font-size: 24px;
}

* {
    margin: 0;
    padding: 0;
}

P {
    margin: 0.5rem 5rem;
}

h2{
    text-align: center;
    font-size: 1.75rem;
}

h3 {
    font-size: 1.25rem;
}

input, textarea {
    padding: 0.5rem;
    font-family: 'Roboto', sans-serif;
    font-size: 1.25rem;
}

/* *********************** Page level styles ************************* */
body {
    font-family: 'Roboto', sans-serif;
    color: var(--primary-font);
    background-color: var(--primary-background);
    min-width: 350px;
}

label {
    margin-bottom: 0.25rem;
}

/* *********************** HEADER and FOOTER ************************* */
.page-header, .page-footer {
    color: var(--header-footer-font);
    background-color: var(--header-footer-background);
}

.page-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1.5rem;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.page-footer {
    padding: 2rem 1.5rem;
}

.footer-links-container {
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

.footer-link-item {
    margin: 0.5rem;
}

.page-menu-container {
    list-style-type: none;
    display: flex;
    font-weight: 700;
}

.page-menu-item{
    margin: 0.5rem;
}

.page-menu-link {
    color: var(--header-footer-font);
    text-decoration: none;
}

.page-menu-link:hover {
    color: var(--hover-primary-accent)
}

/* *********************** main ************************* */
.bg-dark {
    background-color: var(--alternate-background) !important; /* bootstrap override */
}

.profile {
    text-align: center;
}

.main-section {
    padding: 2.5rem 1.5rem;
}

.profile-image {
    width: 200px;
    border-radius: 50%;
}

.profile-heading {
    margin: 1rem;
}

.profile-tagline {
    margin: 0.5rem;
}

.skill-card-container {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.skill-card {
    border: 5px double var(--primary-font);
    padding: 0.8rem;
    width: 250px;
    margin: 1rem 0;
}

.project-thumbnail-img {
    width: 100%;
}

.skill-list {
    list-style-type: none;
}

.project-list {
    list-style-type: none;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
}

.project-item {
    margin: 20px;
}

.project-link {
    text-decoration: none;
    color: var(--primary-font);
    text-shadow: 2px 2px 0px rgba(222, 222, 255, 0.4);
    opacity: 0.8;
}

.project-link:hover {
    color: var(--primary-font-hover);
    text-decoration: underline;
    text-shadow: 2px 2px 3px rgba(222, 222, 255, 0.6);
    opacity: 1;
}

.form-row {
    margin: 1rem auto;
    display: flex;
    flex-direction: column;
    width: 60%;
}

.form-row.no-stretch {
    align-items: flex-start;
}

.send-button {
    background-color: none;
    padding: 0.75rem;
    font-size: 1.25rem;
    cursor: pointer;
    transition: 0.25s;
}

.send-button:hover,
.send-button:focus {
    transform: translateY(-0.25rem);
    color: var(--primary-font-hover);
    border-color: var(--alternate-background);
    background-color: var(--primary-background-hover);
}

@media screen and (max-width: 992px) {
    html {
        font-size: 10px;
    }

    input, textarea {
        font-size: 1rem;
    }
}

@media screen and (max-width: 768px) {
    .skill-card-container {
        flex-direction: column;
        align-items: center;
    }

    .project-list {
        grid-template-columns: 1fr;
    }

    .page-menu-container {
        display: none;
    }

    .form-row {
        width: 80%;
    }
}

@media screen and (max-width: 576px) {
    .footer-links-container {
        flex-direction: column;
        align-items: center;
    }
}

